--- a/TODO
+++ b/TODO
@@ -1,11 +1,12 @@
 TODO:
 3.客户端漫游
-8.TaskRunner线程安全性 (改到epoll主循环中调用, 或在重传接口上加锁)
 4.资源回收
 5.epoll从O(n)遍历优化成O(1)
 6.stream强制rst关闭
 7.socket的正常关闭和rst关闭
+8.服务端重启
 
 Done:
-1.收到fin的关闭stream流程
-2.丢包重传
+*.收到fin的关闭stream流程
+*.丢包重传
+*.TaskRunner线程安全性 (在OnAlarm接口上加锁)
