--- a/TODO
+++ b/TODO
@@ -1,12 +1,16 @@
 TODO:
-3.客户端漫游
-4.资源回收
-5.epoll从O(n)遍历优化成O(1)
-6.stream强制rst关闭
-7.socket的正常关闭和rst关闭
-8.服务端重启
+*.客户端漫游
+*.资源回收
+*.epoll从O(n)遍历优化成O(1)
+*.服务端重启后, 客户端更快感知链接断开事件
+*.socket的正常关闭
+*.性能压测
+*.大并发压测
 
 Done:
 *.收到fin的关闭stream流程
 *.丢包重传
 *.TaskRunner线程安全性 (在OnAlarm接口上加锁)
+*.stream强制rst关闭 (QuicCloseStream)
+*.socket强制rst关闭 (QuicCloseSocket)
+
