--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 TODO:
+*.服务端重启后, 客户端更快感知链接断开事件
+*.服务端关闭半连接时, 主动发送一个RST包
 *.客户端漫游
 *.资源回收
 *.epoll从O(n)遍历优化成O(1)
-*.服务端重启后, 客户端更快感知链接断开事件
 *.socket的正常关闭
 *.性能压测
 *.大并发压测
