--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 TODO:
-*.服务端重启后, 客户端更快感知链接断开事件
-*.服务端关闭半连接时, 主动发送一个RST包
+*.服务端的IdleTimeout设置的短一点
+*.epollwait期间触发err要快速响应.(注册一个空fd到epoll中, 触发err事件就刷一下)
 *.客户端漫游
 *.资源回收
 *.epoll从O(n)遍历优化成O(1)
@@ -8,10 +8,13 @@ TODO:
 *.性能压测
 *.大并发压测
 
+*.服务端关闭半连接时, 主动发送一个RST包
+
 Done:
 *.收到fin的关闭stream流程
 *.丢包重传
 *.TaskRunner线程安全性 (在OnAlarm接口上加锁)
 *.stream强制rst关闭 (QuicCloseStream)
 *.socket强制rst关闭 (QuicCloseSocket)
+*.服务端关闭后, 客户端更快感知链接断开事件 (用心跳不回ack来检测)
 
